<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_30"
    tools:context=".view.AddNewExpense">
   <TextView
       android:id="@+id/newExpenseH"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textColor="@color/title_blue"
       android:text="@string/new_expense_title"
       style="@style/CustomTitleTextLarge"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/border_box"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/grey_border_box_bgd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newExpenseH"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="30dp" />

    <TextView
       android:layout_marginTop="@dimen/dp_20"
       android:layout_marginStart="@dimen/dp_20"
       android:id="@+id/title_text"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="@+id/border_box"
       app:layout_constraintStart_toStartOf="@+id/border_box"
       style="@style/CustomTitleTextSmall"
       android:textColor="@color/title_blue"
       android:text="@string/title_text"
       />
   <EditText
       android:id="@+id/title_value"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="@+id/border_box"
       app:layout_constraintEnd_toEndOf="@+id/border_box"
       android:layout_marginHorizontal="@dimen/dp_20"
       app:layout_constraintTop_toBottomOf="@+id/title_text"
       android:background="@drawable/grey_border_box_bgd"
       android:padding="@dimen/dp_10"
       android:textSize="@dimen/sp_14"
       android:inputType="text"
       android:hint="@string/title_text_hit"
       android:layout_marginTop="@dimen/dp_5"
       />
    <TextView
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_20"
        android:id="@+id/amount_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title_value"
        app:layout_constraintStart_toStartOf="@+id/border_box"
        style="@style/CustomTitleTextSmall"
        android:textColor="@color/title_blue"
        android:text="@string/amount_text"
        />
    <EditText
        android:id="@+id/amount_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/border_box"
        app:layout_constraintEnd_toEndOf="@+id/border_box"
        android:layout_marginHorizontal="@dimen/dp_20"
        app:layout_constraintTop_toBottomOf="@+id/amount_text"
        android:background="@drawable/grey_border_box_bgd"
        android:padding="@dimen/dp_10"
        android:textSize="@dimen/sp_14"
        android:inputType="number"
        android:hint="@string/amount_text_hit"
        android:layout_marginTop="@dimen/dp_5"
        />
    <TextView
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_20"
        android:id="@+id/category_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/amount_value"
        app:layout_constraintStart_toStartOf="@+id/border_box"
        style="@style/CustomTitleTextSmall"
        android:textColor="@color/title_blue"
        android:text="@string/category_text"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>