<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/dp_20"
    android:background="@drawable/border_box_bgd"
    android:paddingVertical="@dimen/dp_30"
    android:layout_margin="@dimen/dp_20"
    tools:context=".view.WelcomeScreen">
    <TextView
        android:id="@+id/welcomeH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="@dimen/sp_32"
        android:textStyle="bold"
        android:textColor="@color/title_blue"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/welcome_headline" />
    <TextView
        android:id="@+id/welcomeST"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeH"
        android:textSize="@dimen/sp_14"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_subtitle" />
    <TextView
        android:id="@+id/welcomeD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeST"
        android:layout_marginTop="@dimen/dp_20"
        android:textSize="@dimen/sp_16"
        android:layout_width="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_height="wrap_content"
        android:text="@string/welcome_description"
        android:textAlignment="center"/>
    <Button
        android:id="@+id/enterB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/start_button"
        android:textStyle="bold"
        android:textColor="@color/text_white"
        android:fontFamily="sans-serif-condensed-medium"
        android:paddingVertical="@dimen/dp_10"
        android:paddingHorizontal="@dimen/dp_50"
        android:backgroundTint="@color/title_blue"
        android:layout_marginTop="@dimen/dp_30"
        app:layout_constraintTop_toBottomOf="@+id/welcomeD"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>